syntax = "proto3";

message GatewayInfo {
    double created_at = 1;
    string service_name = 2;
    uint32 frame_id = 3;
    uint32 gesture_id = 4;   
}

